k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: tequipy
  labels:
    app.kubernetes.io/name: tequipy
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: tequipy
    app.kubernetes.io/component: backend
